--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
   "name": "agiliza",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "author": {
+    "name": "Natan Cipriano",
+    "email": "natancipriano98@gmail.com"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "watch": "ng build --watch -c development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.5",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "~12.0.5",
     "@angular/compiler": "~12.0.5",
     "@angular/core": "~12.0.5",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.0.5",
+    "@angular/material": "^12.0.5",
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "mapbox-gl": "^2.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -27,6 +35,7 @@
     "@angular/cli": "~12.0.5",
     "@angular/compiler-cli": "~12.0.5",
     "@types/jasmine": "~3.6.0",
+    "@types/mapbox-gl": "^2.3.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
