--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.1",
   "author": {
     "name": "Natan Cipriano",
-    "email": "natancipriano98@gmail.com"
+    "email": "natancipriano98@gmail.com",
+    "url": "https://agilizarotas.web.app/"
   },
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch -c development",
-    "test": "ng test"
+    "test": "ng test",
+    "firebase": "firebase deploy",
+    "deploy":  "npm ci && npm run build"
   },
   "private": true,
   "dependencies": {
